Front Finalizado, Banco Totalmente configurado

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,7 +21,7 @@
                         </div>
 
                         <div class="card-footer">
-                            <a href="/responder" class="btn btn-primary">Responder Pergunta</a>
+                            <a href="/pergunta/<%=pergunta.id%>" class="btn btn-primary">Responder Pergunta</a>
                         </div>
 
                     </div>
